# graph_coverage

./: .cursorignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements_with_gpu_working_on_thomas_workstation.txt  setup_av2.sh
.cursor/: architecture.md  quick_reference.md  rules
Notebooks/: argoverse_dabble.ipynb  embedding_quality_evaluation.ipynb  node_coverage_visualization.ipynb  pyproject.toml
Notebooks/argoverse/: check_dataset.ipynb  graph_eda.ipynb
Notebooks/carla/: carla.ipynb  graph_embeddings.ipynb  graphs_eda.ipynb  (+5 more)
article/: article.tex  article_safecomp.tex  lit.bib
carla/: create_data_script.py  create_data_script_synchronous.py  create_data_script_synchronous_simple.py  dev.py  on_or_offroad.py
carla_scripts/: overtake_oncoming.py  pyproject.toml  remove_all.py  spawn_vehicle.py
coverage_holes/: carla_speed_distribution_holes.csv
data/: map_argoverse.pkl
graph_creator/: ActorGraph.py  MapGraph.py  SubgraphExtractor.py  SubgraphIsomorphismChecker.py  check_dataset.ipynb  create_graph.ipynb  create_graph.py  graph_embedding_evaluation.py  graph_embeddings.py  graph_embeddings_v2.py  models.py  plot_graphs.py  pyproject.toml  save  utilities.py
graph_settings/: actor_graph_setting_1_50_50_10_20_20_4_4_4.json
scripts/: argoverse_actor_graph_creation.py  carla_actor_graph_creation.py  extract_components_from_full_graphs.py  graph_embedding_training.py  graph_embedding_training_v2.py  node_coverage_analysis.py  node_coverage_with_components.py
subgraphs/: SubgraphExtractor.py  SubgraphIsomorphismChecker.py  subgraph_types.py
(+64 files in other folders)
