[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.poetry]
name = "graph-creator"
version = "0.1.0"
description = ""
authors = ["Marius Bause","Thomas Muehlenstaedt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
joblib = "^1.4.2"
shapely = "^2.0.7"
numpy = "2.1"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
