[tool.poetry]
name = "graph-creator"
version = "0.1.0"
description = ""
authors = ["Thomas Muehlenstaedt"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
joblib = "^1.4.2"
shapely = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
